--- a/index.html
+++ b/index.html
@@ -67,21 +67,16 @@
                             <span class="author-block">
                                 <a href="https://scholar.google.com/citations?user=v4e49qEAAAAJ" target="_blank">
                                     Yuyuan
-                                    Li
-                                </a>
-                                <sup>2</sup>,
+                                    Li</a><sup>2</sup>,
                             </span>
                             <span class="author-block">
                                 <a href="https://scholar.google.com/citations?user=8zksQb4AAAAJ" target="_blank">
                                     Yu
-                                    Liu
-                                </a>
-                                <sup>1</sup></span>                        
+                                    Liu</a><sup>1</sup></span>                        
                         </div>
 
                         <div class="is-size-5 publication-authors">
-                            <span class="author-block"><sup>1</sup>Alibaba Group,</span>
-                            <span class="author-block"><sup>2</sup>Zhejiang University</span>
+                            <span class="author-block"><sup>1</sup>Alibaba Group</span>&nbsp;&nbsp;<span class="author-block"><sup>2</sup>Zhejiang University</span>
                             <span class="eql-cntrb"><small><br><sup>‡</sup>Equal contribution. <sup>*</sup>Work done during internship at Alibaba Group.</small></span>
                         </div>
 
