--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="columns is-centered has-text-centered">
                         <div class="column is-four-fifths">
                             <div class="publication-video-simm">
-                                <video width="100%" controls autoplay>
+                                <video width="100%" controls>
                                     <source src="https://cloud.video.taobao.com/play/u/null/p/1/e/6/t/1/439686710798.mp4" type="video/mp4">
                                 </video>
                             </div>
