--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             <span class="author-block">
                                 <a href="https://scholar.google.com/citations?user=mZwJLeUAAAAJ" target="_blank">Yutong
                                     Feng</a><sup>1</sup>,</span>
-                            <span class="https://scholar.google.com/citations?user=ZO3OQ-8AAAAJ">
-                                <a href="" target="_blank">Shiwei
+                            <span class="author-block">
+                                <a href="https://scholar.google.com/citations?user=ZO3OQ-8AAAAJ" target="_blank">Shiwei
                                     Zhang</a><sup>1</sup>,</span>                                    
                             <span class="author-block">
                                 <a href="https://scholar.google.com/citations?user=v4e49qEAAAAJ" target="_blank">
