--- a/index.html
+++ b/index.html
@@ -99,7 +99,14 @@
                                         </span>
                                         <span>arXiv</span>
                                     </a>
-                                </span>                           
+                                </span> 
+                                <span class="link-block">
+                                    <a href="https://huggingface.co/papers/2311.15773" target="_blank"
+                                        class="external-link button is-normal is-rounded is-white">
+                                        <span class="icon">🤗</span>
+                                        <span>Paper page</span>
+                                    </a>
+                                </span>                                   
                             </div>
                         </div>
                     </div>
